<?xml version="1.0"?>
<package format="2">
  <name>bookish_carnival</name>
  <version>0.0.0</version>
  <description>The bookish_carnival package</description>

  <maintainer email="asdfirepl@gmail.com">Antoni Malecki</maintainer>

  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>turtlesim</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
