<?xml version="1.0"?>
<package format="2">
  <name>bookish_carnival</name>
  <version>1.0.0</version>
  <description>The bookish_carnival package</description>

  <maintainer email="rob1c2-17b@student.aau.dk">C2-17b</maintainer>

  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>turtlesim</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
